# POC-mcp-python

./: Makefile  README.md  pyproject.toml  run-server.sh
docs/plans/: 2026-03-23-nerd-toolkit-implementation-plan.md  2026-03-23-nerd-toolkit-mcp-design.md
src/nerd_toolkit/: __init__.py  __main__.py  config.py  server.py
src/nerd_toolkit/clients/: base.py  dnd.py  scryfall.py
src/nerd_toolkit/dnd/: prompts.py  resources.py  tools.py
src/nerd_toolkit/mtg/: prompts.py  resources.py  tools.py
tests/: test_dnd_client.py  test_dnd_tools.py  test_mtg_tools.py  test_scryfall_client.py
